# cook-grpc

./: .gitignore  .gitmodules  pom.xml
cook-gapic-java/: pom.xml
cook-gapic-java/src/main/java/pub/wii/cook/gapic/client/: CookServiceClient.java  CookServiceClientMultiple.java  CookServiceGapicClient.java  CookServiceStubClient.java  DefaultCookServiceGapicClient.java  DynamicNameResolver.java  DynamicNameResolverProvider.java  MultiAddressNameResolverFactory.java  SimpleCookServiceGapicClient.java
cook-gapic-java/src/main/java/pub/wii/cook/gapic/service/: CookServiceImpl.java  CookServiceImplMultiple.java
cook-gapic-playground/: README.md  clean.sh  gen-description.sh  gen-gapic-config.sh  gen-greeter-code-java.sh  gen-greeter-code-python.sh  gen-grpc-lib.sh  gen-pipeline.sh  gen-proto-lib.sh  greeter-gapic-config.yaml  greeter-meta-config.yaml  greeter-service.yaml  greeter.proto  greeter.proto.pb
cook-grpc-apis/: BUILD  README.md  WORKSPACE  WORKSPACE.bazel  clean.sh  repository_rules.bzl
cook-grpc-apis/cook/v1/: BUILD.bazel  cook.proto  cook_gapic.yaml  cook_gapic_config.yaml  cook_gapic_service_config.json  cook_service.yaml
cook-grpc-apis/example/: BUILD  BUILD.bazel  person.proto  person_example_v1.yaml
cook-grpc-apis/example/v1/: BUILD.bazel  person.proto  person.yaml  person_gapic.yaml  person_grpc_service_config.json
cook-grpc-apis/scripts/: build.sh  clean.sh
cook-grpc-common/: pom.xml
cook-grpc-common/src/main/java/governance/constants/: Constants.java
cook-grpc-common/src/main/java/governance/discovery/: Discovery.java
cook-grpc-common/src/main/java/governance/model/: InstanceDetail.java  Payload.java  StubWrapper.java
cook-grpc-common/src/main/java/governance/nameresolver/: DynamicNameResolverProvider.java  ZKNameResolver.java
cook-grpc-common/src/main/java/governance/stub/: StubFactory.java
cook-grpc-common/src/main/java/governance/utils/: ReflectUtils.java  ZKUtils.java
lib/: java_cook_gapic_srcjar.srcjar
