# load("@build_stack_rules_proto//cpp:cpp_proto_library.bzl", "cpp_proto_library")
load("@build_stack_rules_proto//java:java_grpc_library.bzl", "java_grpc_library")
load("@build_stack_rules_proto//python:python_grpc_library.bzl", "python_grpc_library")

# cpp_proto_library(
#     name = "cpp_person_proto",
#     deps = [":person_proto"],
# )

java_grpc_library(
    name = "java_person_grpc",
    deps = [":person_proto"],
)

python_grpc_library(
    name = "python_person_grpc",
    deps = [":person_proto"],
)

proto_library(
    name = "person_proto",
    srcs = ["person.proto"],
    deps = ["@com_google_protobuf//:any_proto"],
)