load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "java_gapic_assembly_gradle_pkg",
    "java_gapic_library",
    "java_grpc_library",
    "java_proto_library",
)

#
# Java
#

java_proto_library(
    name = "java_cook_proto",
    deps = [":cook_proto"],
)

java_grpc_library(
    name = "java_cook_grpc",
    srcs = [":cook_proto"],
    deps = [":java_cook_proto"],
)

java_gapic_library(
    name = "java_cook_gapic",
    srcs = [":cook_proto"],
    gapic_yaml = "cook_gapic.yaml",
    grpc_service_config = "cook_gapic_service_config.json",
    deps = [
        ":java_cook_proto",
    ],
)

java_gapic_assembly_gradle_pkg(
    name = "gapic-cook-v1-java",
    deps = [
        ":java_cook_gapic",
        ":java_cook_grpc",
        ":java_cook_proto",
        ":cook_proto",
    ],
)

proto_library(
    name = "cook_proto",
    srcs = ["cook.proto"],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_googleapis//google/api:resource_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:any_proto",
    ],
)